# Copyright (C) 2004 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

imagesdir=$(localstatedir)/lib/netxms/images

images_DATA = \
	092e4b35-4e7c-42df-b9b7-d5805bfac64e \
	1ddb76a3-a05f-4a42-acda-22021768feaf \
	7cd999e9-fbe0-45c3-a695-f84523b3a50c \
	904e7291-ee3f-41b7-8132-2bd29288ecc8 \
	b314cf44-b2aa-478e-b23a-73bc5bb9a624 \
	ba6ab507-f62d-4b8f-824c-ca9d46f22375 \
	bacde727-b183-4e6c-8dca-ab024c88b999 \
	f5214d16-1ab1-4577-bb21-063cfd45d7af \
	f9105c54-8dcf-483a-b387-b4587dfd3cba

EXTRA_DIST=$(images_DATA)
