# Copyright (C) 2004 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

include_HEADERS = \
	appagent.h \
	ata.h \
	base64.h \
	build.h \
	config-netware.h \
	dbdrv.h \
	geolocation.h \
	ieee8021x.h \
	netxmsdb.h \
	netxms_getopt.h \
	netxms_isc.h \
	netxms_maps.h \
	netxms-regex.h \
	netxms-version.h \
	nms_agent.h \
	nms_common.h \
	nms_cscp.h \
	nms_threads.h \
	nms_util.h \
	nxclapi.h \
	nxconfig.h \
	nxcpapi.h \
	nxdbapi.h \
	nxevent.h \
	nxlexer_styles.h \
	nxlog.h \
	nxlpapi.h \
	nxmbapi.h \
	nxqueue.h \
	nxsdapi.h \
	nxsl_classes.h \
	nxsl.h \
	nxsm_ext.h \
	nxsnmp.h \
	nxstat.h \
	nxtools.h \
	nxwinui.h \
	rwlock.h \
	unicode.h \
	uthash.h \
	uuid.h
