# Copyright (C) 2004 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

include_HEADERS = \
	appagent.h \
	ata.h \
	base32.h \
	base64.h \
	dbdrv.h \
	ethernet_ip.h \
	gauge_helpers.h \
	geolocation.h \
	ieee8021x.h \
	interface_types.h \
	netxmsdb.h \
	netxms_getopt.h \
	netxms_isc.h \
	netxms-regex.h \
	netxms-version.h \
	ncdrv.h \
	nms_agent.h \
	nms_common.h \
	nms_cscp.h \
	nms_threads.h \
	nms_util.h \
	nx_shared_ptr.h \
	nxatomic.h \
	nxcall.h \
	nxcc.h \
	nxcldefs.h \
	nxclient.h \
	nxclobj.h \
	nxconfig.h \
	nxcpapi.h \
	nxcrypto.h \
	nxdbapi.h \
	nxevent.h \
	nxjava.h \
	nxlibcurl.h \
	nxlog.h \
	nxlpapi.h \
	nxmbapi.h \
	nxnet.h \
	nxproc.h \
	nxpython.h \
	nxqueue.h \
	nxsde.h \
	nxsl_classes.h \
	nxsl.h \
	nxsnmp.h \
	nxsocket.h \
	nxstat.h \
	nxtask.h \
	nxtools.h \
	nxtux.h \
	nxvault.h \
	pugiconfig.h \
	pugixml.h \
	rwlock.h \
	socket_listener.h \
	symbol_visibility.h \
	tls_conn.h \
	unicode.h \
	uthash.h \
	uuid.h \
	welford.h \
	winmutex.h \
	winrwlock.h

SUBDIRS = jansson msvc
