# Copyright (C) 2004 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
	create_apkg.sh \
	create_bin_apkg.sh \
	create_ssa_list.sh \
	create_table_list.pl \
	mc.pl \
	mc.rule flex_bison.rule \
	nwmkimp.pl \
	patch_config.status.pl \
	sharIt \
	stub.sh \
	updatetag.sh \
	update_xrc.pl
