# Copyright (C) 2004, 2005 NetXMS Team <bugs@netxms.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

mibsdir=$(pkgdatadir)/mibs

mibs_DATA = \
	AAC-MIB.txt \
	ACLMGMT-MIB.txt \
	AGENT-GENERAL-MIB.txt \
	APACHE2-MIB.txt \
	APPLICATION-MIB.txt \
	ARCADA-MIB.txt \
	ARP-Spoofing-Prevent-MIB.txt \
	ASTARO-MIB.txt \
	ASTERISK-MIB.txt \
	ATM-TC-MIB.txt \
	AUTH-MIB.txt \
	BAY-STACK-ADAC-MIB.txt \
	BAY-STACK-ARP-INSPECTION-MIB.txt \
	BAY-STACK-DHCP-SNOOPING-MIB.txt \
	BAY-STACK-ECMP-MIB.txt \
	BAY-STACK-ERROR-MESSAGE-MIB.txt \
	BAY-STACK-LACP-EXT-MIB.txt \
	BAY-STACK-MIB.txt \
	BAY-STACK-MULTICAST-FLOODING-MIB.txt \
	BAY-STACK-NOTIFICATIONS-MIB.txt \
	BAY-STACK-OSPF-EXT-MIB.txt \
	BAY-STACK-PETH-EXT-MIB.txt \
	BAY-STACK-RADIUS-MIB.txt \
	BAY-STACK-SOURCE-GUARD-MIB.txt \
	BAY-STACK-STATS-MIB.txt \
	BAY-STACK-VRRP-EXT-MIB.txt \
	BGP4-MIB.txt \
	BN-IF-EXTENSIONS-MIB.txt \
	BPDU-PROTECTION-MIB.txt \
	BPDU-TUNNELING-MIB.txt \
	BRIDGE-MIB.txt \
	CABLE-DIAG-MIB.txt \
	CDX-6500-COMMON-MIB.txt \
	CHECKPOINT-NG-MIB.txt \
	CISCO-BRIDGE-EXT-MIB.txt \
	CISCO-C2900-MIB.txt \
	CISCO-CDP-MIB.txt \
	CISCO-CLUSTER-MIB.txt \
	CISCO-ENTITY-VENDORTYPE-OID-MIB.txt \
	CISCO-ENVMON-MIB.txt \
	CISCO-HSRP-EXT-MIB.txt \
	CISCO-HSRP-MIB.txt \
	CISCO-IF-EXTENSION-MIB.txt \
	CISCO-L2L3-INTERFACE-CONFIG-MIB.txt \
	CISCO-MAC-NOTIFICATION-MIB.txt \
	CISCO-MEMORY-POOL-MIB.txt \
	CISCO-PING-MIB.txt \
	CISCO-PRIVATE-VLAN-MIB.txt \
	CISCO-PROCESS-MIB.txt \
	CISCO-PRODUCTS-MIB.txt \
	CISCO-QOS-PIB-MIB.txt \
	CISCO-SMI.txt \
	CISCO-STACK-MIB.txt \
	CISCO-STACKMAKER-MIB.txt \
	CISCO-STP-EXTENSIONS-MIB.txt \
	CISCO-SWITCH-CGMP-MIB.txt \
	CISCO-SYSLOG-MIB.txt \
	CISCO-TC.txt \
	CISCO-TCP-MIB.txt \
	CISCO-VLAN-IFTABLE-RELATIONSHIP-MIB.txt \
	CISCO-VLAN-MEMBERSHIP-MIB.txt \
	CISCO-VTP-MIB.txt \
	CONFIG-MIB.txt \
	COSINE-GLOBAL-REG.txt \
	COSINE-InVision-MIB.txt \
	COSINE-ORION-MIB.txt \
	CPQHOST-MIB.txt \
	CPQPOWER-MIB.txt \
	DDM-MGMT-MIB.txt \
	Dell-Vendor-MIB.txt \
	DES3200-10-L2MGMT-MIB.txt \
	DES3200-10-L3MGMT-MIB.txt \
	DES3200-18-L2MGMT-MIB.txt \
	DES3200-18-L3MGMT-MIB.txt \
	DES3200-18DC-L3MGMT-MIB.txt \
	DES3200-26-L2MGMT-MIB.txt \
	DES3200-26-L3MGMT-MIB.txt \
	DES3200-26DC-L3MGMT-MIB.txt \
	DES3200-28-L2MGMT-MIB.txt \
	DES3200-28-L3MGMT-MIB.txt \
	DES3200-28F-L2MGMT-MIB.txt \
	DES3200-28F-L3MGMT-MIB.txt \
	DES3200-28ME-L2MGMT-MIB.txt \
	DES3200-28ME-L3MGMT-MIB.txt \
	DES3200-28P-L2MGMT-MIB.txt \
	DES3200-28P-L3MGMT-MIB.txt \
	DES3200-52-L2MGMT-MIB.txt \
	DES3200-52-L3MGMT-MIB.txt \
	DES3200-52DC-L2MGMT-MIB.txt \
	DES3200-52DC-L3MGMT-MIB.txt \
	DES3200-52P-L2MGMT-MIB.txt \
	DES3200-52P-L3MGMT-MIB.txt \
	DHCP-RELAY-MGMT-MIB.txt \
	DIGIUM-MIB.txt \
	DISMAN-PING-MIB.txt \
	DISMAN-TRACEROUTE-MIB.txt \
	DLINK-ID-REC-MIB.txt \
	DOS-PREV-MIB.txt \
	DOT12-IF-MIB.txt \
	DOT12-RPTR-MIB.txt \
	Dot1xMGMT-MIB.txt \
	DOT3-OAM-MIB.txt \
	DS1-MIB.txt \
	DS3-MIB.txt \
	DVMRP-MIB.txt \
	EF-6000-MIB.txt \
	EMBEDDED-NGX-MIB.txt \
	ENTITY-MIB.txt \
	ENTITY-SENSOR-MIB.txt \
	ENTITY-STATE-MIB.txt \
	EQUIPMENT-MIB.txt \
	ERD-3.txt \
	ERPS-MIB.txt \
	ES-1000-MIB.txt \
	EtherLike-MIB.txt \
	FAN-MIB.txt \
	FDDI-SMT73-MIB.txt \
	FIBRE-CHANNEL-FE-MIB.txt \
	FILTER-MIB.txt \
	FOUNDRY-CAR-MIB.txt \
	FOUNDRY-SN-AGENT-MIB.txt \
	FOUNDRY-SN-IP-MIB.txt \
	FOUNDRY-SN-OSPF-GROUP-MIB.txt \
	FOUNDRY-SN-ROOT-MIB.txt \
	FOUNDRY-SN-SW-L4-SWITCH-GROUP-MIB.txt \
	FOUNDRY-SN-SWITCH-GROUP-MIB.txt \
	FOUNDRY-SN-TRAP-MIB.txt \
	FOUNDRY-SN-VSRP-MIB.txt \
	HCNUM-TC.txt \
	HOST-RESOURCES-MIB.txt \
	HOST-RESOURCES-TYPES.txt \
	HP-AUTH-MIB.txt \
	HP-DOT1X-EXTENSIONS-MIB.txt \
	HP-ENTITY-MIB.txt \
	HP-ICF-8023-RPTR.txt \
	HP-ICF-ARP-PROTECT.txt \
	HP-ICF-AUTORUN.txt \
	HP-ICF-BASIC.txt \
	HP-ICF-BRIDGE.txt \
	HP-ICF-CHAIN.txt \
	HP-ICF-CHASSIS.txt \
	HP-ICF-DOWNLOAD.txt \
	HP-ICF-FTRCO.txt \
	HP-ICF-GENERIC-RPTR.txt \
	HP-ICF-IP-ROUTING.txt \
	HP-ICF-IPCONFIG.txt \
	HP-ICF-JUMBO-MIB.txt \
	HP-ICF-LINKTEST.txt \
	HP-ICF-OID.txt \
	HP-ICF-OSPF.txt \
	HP-ICF-POE-MIB.txt \
	HP-ICF-PROVIDER-BRIDGE.txt \
	HP-ICF-SECURITY.txt \
	HP-ICF-SNMP-MIB.txt \
	HP-ICF-STACK.txt \
	HP-ICF-SYSLOG-MIB.txt \
	HP-ICF-TC.txt \
	HP-ICF-UDP-FORWARD.txt \
	HP-ICF-USBPORT.txt \
	HP-ICF-VRRP-MIB.txt \
	HP-ICF-XRRP.txt \
	HP-SNTPclientConfiguration-MIB.txt \
	HP-SwitchStack-MIB.txt \
	HP-VLAN.txt \
	HpicfHighAvailability-MIB.txt \
	IANA-ADDRESS-FAMILY-NUMBERS-MIB.txt \
	IANA-LANGUAGE-MIB.txt \
	IANA-RTPROTO-MIB.txt \
	IANAifType-MIB.txt \
	IBM-6611-APPN-MIB.txt \
	IBM-MIB.txt \
	IBMCPU-MIB.txt \
	ICF-ETWIST.txt \
	IEEE8021-PAE-MIB.txt \
	IEEE8023-LAG-MIB.txt \
	IEEE802dot11-MIB.txt \
	IF-MIB.txt \
	IGMP-MIB.txt \
	INET-ADDRESS-MIB.txt \
	IP-FORWARD-MIB.txt \
	IP-MAC-BIND-MIB.txt \
	IP-MIB.txt \
	IPMROUTE-STD-MIB.txt \
	IPV6-FLOW-LABEL-MIB.txt \
	IPV6-MLD-MIB.txt \
	IPV6-STATIC-ROUTE-MIB.txt \
	IPV6-TC.txt \
	IPX.txt \
	JUNIPER-IVE-MIB.txt \
	JVM-MANAGEMENT-MIB.txt \
	JWAC-MIB.txt \
	LAG-MIB.txt \
	LANNET-MIB.txt \
	LLDP-EXT-DOT1-MIB.txt \
	LLDP-EXT-DOT3-MIB.txt \
	LLDP-MIB.txt \
	LLDP-V2-MIB.txt \
	LLDP-V2-TC-MIB.txt \
	Mac-Based-Authentication-MIB.txt \
	MAU-MIB.txt \
	MCAST-SNOOPING-MIB.txt \
	MLD-SNOOPING-MIB.txt \
	MSSQLSERVER-MIB.txt \
	MSTP-MIB.txt \
	MTA-MIB.txt \
	NET-SNMP-AGENT-MIB.txt \
	NET-SNMP-MIB.txt \
	NET-SNMP-MONITOR-MIB.txt \
	NET-SNMP-SYSTEM-MIB.txt \
	NET-SNMP-TC.txt \
	NETSCREEN-ADDR-MIB.txt \
	NETSCREEN-INTERFACE-MIB.txt \
	NETSCREEN-NAT-MIB.txt \
	NETSCREEN-PRODUCTS-MIB.txt \
	NETSCREEN-RESOURCE-MIB.txt \
	NETSCREEN-SCHEDULE-MIB.txt \
	NETSCREEN-SERVICE-MIB.txt \
	NETSCREEN-SMI.txt \
	NETSCREEN-TRAP-MIB.txt \
	NETSCREEN-VPN-MON-MIB.txt \
	NETSCREEN-VR-MIB.txt \
	NETSCREEN-VSYS-MIB.txt \
	NETSWITCH-MIB.txt \
	NetWare-Server-MIB.txt \
	NETWORK-APPLIANCE-MIB.txt \
	NETWORK-SERVICES-MIB.txt \
	NOKIA-IPSO-REGISTRATION-MIB.txt \
	NOKIA-IPSO-SYSTEM-MIB.txt \
	NTWS-AP-CONFIG-MIB.txt \
	NTWS-AP-IF-MIB.txt \
	NTWS-AP-STATUS-MIB.txt \
	NTWS-AP-TC.txt \
	NTWS-AP-UNCONFIGURED-MIB.txt \
	NTWS-BASIC-MIB.txt \
	NTWS-BASIC-TC.txt \
	NTWS-CLIENT-SESSION-MIB.txt \
	NTWS-CLIENT-SESSION-TC.txt \
	NTWS-EXTERNAL-SERVER-MIB.txt \
	NTWS-INFO-RF-DETECT-MIB.txt \
	NTWS-LICENSE-FEATURE-TC-MIB.txt \
	NTWS-PORT-MIB.txt \
	NTWS-REGISTRATION-CHASSIS-MIB.txt \
	NTWS-REGISTRATION-DEVICES-MIB.txt \
	NTWS-RF-DETECT-TC.txt \
	NTWS-ROOT-MIB.txt \
	NTWS-SYSTEM-MIB.txt \
	NTWS-TRAP-MIB.txt \
	NTWS-TRAPLOG-MIB.txt \
	OPTIMUX-MIB.txt \
	OSPF-MIB.txt \
	OSPF-TRAP-MIB.txt \
	P-BRIDGE-MIB.txt \
	PerfHist-TC-MIB.txt \
	PIM-MIB.txt \
	PKT-STORM-CTRL-MIB.txt \
	POLYCOM-RMX-MIB.txt \
	PORT-SECURITY-MIB.txt \
	POWER-ETHERNET-MIB.txt \
	PowerNet-MIB.txt \
	POWERSUPPLY-MIB.txt \
	Printer-MIB.txt \
	Q-BRIDGE-MIB.txt \
	RADIUS-ACCT-CLIENT-MIB.txt \
	RADIUS-ACCT-SERVER-MIB.txt \
	RADIUS-AUTH-CLIENT-MIB.txt \
	RADIUS-AUTH-SERVER-MIB.txt \
	RADIUS-DYNAUTH-CLIENT-MIB.txt \
	RADIUS-DYNAUTH-SERVER-MIB.txt \
	RADLAN-CPU-COUNTERS-MIB.txt \
	RADLAN-Dell-Private-MIB.txt \
	RADLAN-HWENVIROMENT.txt \
	RADLAN-MIB.txt \
	RADLAN-PHY-MIB.txt \
	RADLAN-Physicaldescription-MIB.txt \
	RADLAN-rlInterfaces.txt \
	RADLAN-rndMng.txt \
	RADLAN-SENSORENTMIB.txt \
	RADLAN-SNMP-MIB.txt \
	RADLAN-SNMPv2.txt \
	RADLAN-TRUNK-MIB.txt \
	RADLAN-vlan-MIB.txt \
	RAPID-CITY-BAY-STACK.txt \
	RAPID-CITY.txt \
	RC-MLT-MIB.txt \
	RDBMS-MIB.txt \
	RFC-1212.txt \
	RFC-1215.txt \
	RFC1155-SMI.txt \
	RFC1213-MIB.txt \
	RFC1271-MIB.txt \
	RFC1354-MIB.txt \
	RIPv2-MIB.txt \
	RMON-MIB.txt \
	RMON2-MIB.txt \
	RS-232-MIB.txt \
	S5-AGENT-MIB.txt \
	S5-CHASSIS-MIB.txt \
	S5-CHASSIS-TRAP-MIB.txt \
	S5-ETH-MULTISEG-TOPOLOGY-MIB.txt \
	S5-ETH-REDUNDANT-LINKS-MIB.txt \
	S5-ETHERNET-COMMON-MIB.txt \
	S5-ETHERNET-MIB.txt \
	S5-ETHERNET-TRAP-MIB.txt \
	S5-REG-MIB.txt \
	S5-ROOT-MIB.txt \
	S5-SWITCH-BAYSECURE-MIB.txt \
	S5-TCS-MIB.txt \
	SAFEGUARD-ENGINE-MIB.txt \
	SAVEPOWER-MIB.txt \
	SEMI-MIB.txt \
	SFLOW-MIB.txt \
	SINGLE-IP-MIB.txt \
	SMON-MIB.txt \
	SNMP-COMMUNITY-MIB.txt \
	SNMP-FRAMEWORK-MIB.txt \
	SNMP-MPD-MIB.txt \
	SNMP-NOTIFICATION-MIB.txt \
	SNMP-PROXY-MIB.txt \
	SNMP-REPEATER-MIB.txt \
	SNMP-TARGET-MIB.txt \
	SNMP-USER-BASED-SM-MIB.txt \
	SNMP-VIEW-BASED-ACM-MIB.txt \
	SNMPv2-CONF.txt \
	SNMPv2-MIB.txt \
	SNMPv2-SMI.txt \
	SNMPv2-TC.txt \
	SNMPv2-TM.txt \
	STATIC-MAC-BASED-VLAN-MIB.txt \
	STATICFDB-MIB.txt \
	STATISTICS-MIB.txt \
	SUBNETVLAN-MIB.txt \
	SUN-HW-CTRL-MIB.txt \
	SUN-HW-TRAP-MIB.txt \
	SUN-PLATFORM-MIB.txt \
	SUPERVLAN-MIB.txt \
	SW-MIB.txt \
	SWPRIMGMT-DES3200-MIB.txt \
	SYNOPTICS-COMMON-MIB.txt \
	SYNOPTICS-ROOT-MIB.txt \
	SYSAPPL-MIB.txt \
	TCP-MIB.txt \
	TIME-MIB.txt \
	TIMERANGE-MIB.txt \
	TOKEN-RING-RMON-MIB.txt \
	TOKENRING-STATION-SR-MIB.txt \
	TUNNEL-MIB.txt \
	UCD-DISKIO-MIB.txt \
	UCD-DLMOD-MIB.txt \
	UCD-IPFILTER-MIB.txt \
	UCD-IPFWACC-MIB.txt \
	UCD-SNMP-MIB.txt \
	UDP-MIB.txt \
	UPS-MIB.txt \
	USEC-MIB.txt \
	V2ADMIN-MIB.txt \
	VLAN-COUNTER-MIB.txt \
	VOICE-VLAN-MIB.txt \
	VRRP-MIB.txt \
	WebBase-Access-Control-MIB.txt \
	WF-COM.txt \
	WS-CC-RF-MIB.txt \
	WS-CC-SMI.txt \
	WS-CC-STATS-MIB.txt \
	WS-INFRA-AUTO-UPDATE-MIB.txt \
	WS-INFRA-CLUSTER-MIB.txt \
	WS-INFRA-DIAG-MIB.txt \
	WS-INFRA-FILE-MGMT-MIB.txt \
	WS-INFRA-LIC-MIB.txt \
	WS-INFRA-NTP-MIB.txt \
	WS-INFRA-PM-MIB.txt \
	WS-INFRA-SMI-MIB.txt \
	WS-INFRA-SYSMSG-MIB.txt \
	WS-MGMT-MIB.txt \
	WS-SEC-VPN-MIB.txt \
	WS-SMI.txt \
	WS-SW-ACL-MIB.txt \
	WS-SW-ARP-MIB.txt \
	WS-SW-AUTHENTICATEDNTP-MIB.txt \
	WS-SW-DHCP-MIB.txt \
	WS-SW-DHCPSERVER-MIB.txt \
	WS-SW-DNS-MIB.txt \
	WS-SW-GRE-MIB.txt \
	WS-SW-GUEST-USER-RAD-MIB.txt \
	WS-SW-IF-MIB.txt \
	WS-SW-IP-MIB.txt \
	WS-SW-MOBILITY-MIB.txt \
	WS-SW-PORTVLAN-MIB.txt \
	WS-SW-RADIUS-MIB.txt \
	WS-SW-SMI.txt \
	WS-SW-SNMP-SAVE-MIB.txt \
	WS-TRAP-MIB.txt \
	WS-TYPE-MIB.txt \
	WS-USER-MGMT-MIB.txt \
	WWW-MIB.txt \
	XPPC-MIB.txt \
	ZONE-DEFENSE-MGMT-MIB.txt
 
EXTRA_DIST=$(mibs_DATA)
